--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@tanstack/react-query": "^5.90.20",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
