--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:20-bookworm-slim
+FROM node:20-bookworm-slim AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install full deps for build (Nest CLI is a devDependency)
+RUN npm ci
 
 # Copy source code
 COPY . .
@@ -14,11 +14,30 @@ COPY . .
 # Build
 RUN npm run build
 
-# Create necessary directories
+# Runtime image
+FROM node:20-bookworm-slim
+
+WORKDIR /app
+
+# Docker CLI is required because the backend spawns `docker run`
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends docker.io ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
+# Copy package files
+COPY package*.json ./
+
+# Install production dependencies
+RUN npm ci --only=production && npm cache clean --force
+
+# Copy built output + seed data
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/seed ./seed
+
+# Create necessary directories (mounted in compose in prod)
 RUN mkdir -p data tmp
 
-# Expose port
 EXPOSE 4000
 
-# Start
-CMD ["npm", "run", "start:prod"]
+# Seed DB on first run (no-op if already seeded), then start
+CMD ["sh", "-c", "node dist/scripts/seed-once.js && node dist/main.js"]
