--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,7 +21,13 @@ WORKDIR /app
 
 # Docker CLI is required because the backend spawns `docker run`
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends docker.io ca-certificates \
+  && apt-get install -y --no-install-recommends ca-certificates curl gnupg \
+  && install -m 0755 -d /etc/apt/keyrings \
+  && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+  && chmod a+r /etc/apt/keyrings/docker.gpg \
+  && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian bookworm stable" > /etc/apt/sources.list.d/docker.list \
+  && apt-get update \
+  && apt-get install -y --no-install-recommends docker-ce-cli \
   && rm -rf /var/lib/apt/lists/*
 
 # Copy package files
