--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
       - "4000:4000"
     volumes:
       - ./backend/data:/app/data
-      - ./backend/tmp:/app/tmp
+      # Host-visible path for bind-mounting into runner containers
+      - /tmp/they-cut-we-code:/tmp/they-cut-we-code
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - NODE_ENV=production
       - PORT=4000
+      - RUNNER_TMP_DIR=/tmp/they-cut-we-code
     restart: unless-stopped
     networks:
       - judge-network
